# Incident-Management-Assistant

./: .clineignore  .codexignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TEMP__const_head.txt  TEMP__ics205_before.txt  TEMP__tdw.qml  __patch_edit_sortie.ps1  _ads_inspect.py  _constants_backup.txt  _gen_binding_catalog.py  _gen_mappings.py  _head_teamdetail.tmp  _list_tables.py  _print_schema.py  _scan_incidents.py  _schema_dump.py  _scratch_check.py  _snippet.txt  _table_info.py  _tmp_import_check.py  _tmp_import_team_panel.py  _tmp_qml_numbered.txt  _veh_block.txt  add_roster_dialog_and_wire.ps1.py  add_vehicle_equipment_dialogs.py  agents.md  apply_team_add_personnel_dialog.py  backlog.md  build_server_console.bat  clean_team_detail_master.py  commitmsg.txt  compile_check.py  compile_queries.py  conftest.py  docs_incident_storage_refactor.md  (+47 more)
.codex/: config.toml
data/: fema_resource_types_raw.json  master.db  master2.db  master2.db-journal  pyproject.toml  resource_types.csv  sample_data.py
data/cache/weather/: debug_awc_metar_raw.json  debug_awc_taf_raw.json  last_payload_debug.json  last_payload_debug_empty.json
data/db/: migrate_record_ids.py  rebuild_demo_personnel.py  seed_demo_checkins.py  seed_incidents_from_sqlite.py  seed_master_from_sqlite.py  seed_objective_templates.py  sync_local_to_cloud.py
data/db/sarapp_db/: verify_mongo_framework.py
data/db/sarapp_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/examples/: aircraft_inventory_seed.json
data/forms/: catalog.json
data/incidents/: 2025-FAIR.db  26-T-4301.db  demo-incident.db  template.db
data/sql/: optional_master_migrations.sql
data/templates/: form_templates.json  registry.json
(+1903 files in other folders)
