[project]
name = "PySide QtQuick Project"
dependencies = [
    "PySide6",
    "fastapi",
    "pydantic",
    "reportlab",
    "PySide6-QtAds",
    "httpx",
    "sqlalchemy",
    "sqlmodel>=0.0.8",
    "pypdf",
    "PyYAML",
    "openpyxl"
]


[tool.pyside6-project]





[tool.pytest.ini_options]
pythonpath = ["."]
