[project]
name = "PySide QtQuick Project"
dependencies = [
    "PySide6",
    "fastapi",
    "pydantic",
    "reportlab",
    "PySide6-QtAds",
    "certifi",
    "httpx",
    "sqlalchemy",
    "sqlmodel>=0.0.8",
    "pypdf",
    "PyYAML",
    "openpyxl",
    "websocket-client"
]


[tool.pyside6-project]
