[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sarapp-db"
version = "0.1.0"
description = "Shared MongoDB database framework for SARApp servers"
requires-python = ">=3.11"
dependencies = [
    "pymongo>=4.6",
    "pydantic>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.8",
    "firebase-admin>=6.5",
]

[tool.setuptools.packages.find]
where = ["db"]
include = ["sarapp_db*"]
